Closed Bug 1492764 Opened 6 years ago Closed 6 years ago

[MATE] Missing CSD buttons with BlueMenta theme

Categories

(Core :: Widget: Gtk, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla64
Tracking Status
firefox-esr60 --- verified
firefox62 --- wontfix
firefox63 --- verified
firefox64 --- verified

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Using default BlueMenta theme with CSD leads to missing icons on titlebar buttons: https://github.com/mate-desktop/marco/issues/427#issuecomment-423086891 Reproductible on Fedora 28/MATE.
I can confirm this with using BlueMenta theme in mate-session during testing https://github.com/mate-desktop/marco/issues/427 Additional info: We are using png images for the minimize/maximize/close buttons with this theme. https://github.com/mate-desktop/mate-themes/blob/master/desktop-themes/BlueMenta/gtk-3.0/window-controls.css#L39
Gtk+ sets .left/.right classes to GtkBox element at GtkHeaderBar according to button placement (left/right). We don't support that now so set .left at least to be compatible with themes - BlueMenta for instance.
Comment on attachment 9011433 [details] Bug 1492764 - Set .left class to headerbar box element as Gtk+ does, r=jhorak Jan Horak [:jhorak] has approved the revision.
Attachment #9011433 - Flags: review+
Can you ping me if a firefox nightly is available for testing please?
sure
Flags: needinfo?(stransky)
Pushed by nbeleuzu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ee8ba6ad714a Set .left class to headerbar box element as Gtk+ does, r=jhorak
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
I can confirm that the issue with BlueMenta theme is fixed with latest nightly from today. Thanks a lot.
Comment on attachment 9011433 [details] Bug 1492764 - Set .left class to headerbar box element as Gtk+ does, r=jhorak Approval Request Comment [Feature/Bug causing the regression]: Bug 1283299 [User impact if declined]: Missing icons in titlebar button on MATE [Is this code covered by automated tests?]: no [Has the fix been verified in Nightly?]: yes [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: Minor theme/style fix on Linux [String changes made/needed]: none
Flags: needinfo?(stransky)
Attachment #9011433 - Flags: approval-mozilla-beta?
Comment on attachment 9011433 [details] Bug 1492764 - Set .left class to headerbar box element as Gtk+ does, r=jhorak Polish GTK fix, minimal patch, fix confirmed on nightly, uplift accepted for 63 beta 11, thanks.
Attachment #9011433 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Did you want this on ESR60, Martin?
Flags: needinfo?(stransky)
QA Contact: jmathies
QA Contact: jmathies
Comment on attachment 9011433 [details] Bug 1492764 - Set .left class to headerbar box element as Gtk+ does, r=jhorak [ESR Uplift Approval Request] If this is not a sec:{high,crit} bug, please state case for ESR consideration: Low risk theme fix for MATE, fixes missing titlebar buttons. User impact if declined: Missing icons in titlebar button on MATE Fix Landed on Version: 63, 64 Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): Minor theme/style fix on Linux, just adds missing css class to titlebar buttons. String or UUID changes made by this patch: none
Flags: needinfo?(stransky)
Attachment #9011433 - Flags: approval-mozilla-esr60?
Comment on attachment 9011433 [details] Bug 1492764 - Set .left class to headerbar box element as Gtk+ does, r=jhorak Minor Linux theme fix, approved for ESR 60.3.
Attachment #9011433 - Flags: approval-mozilla-esr60? → approval-mozilla-esr60+
Flags: qe-verify+
I have verified that the issue is no longer reproducible on the latest Beta 63.0b13 (Build ID 20181008155858) and the latest Nightly 64.0a1 (Build 20181011100123) on Fedora 28. Also, I could not verify if the issue is reproducible on ESR 60.3 because the build is not available at the moment.
Status: RESOLVED → VERIFIED
Also I'm going to leave needinfo on myself to verify the issue on ESR60.3 once the build is available.
Flags: needinfo?(remus.dranca)
You can use a CI build now to verify.
I have verified that the issue is no longer reproducible on the latest ESR 60.2.3esr (Build ID 20181010193149) on Fedora 28, downloaded from https://index.taskcluster.net/v1/task/gecko.v2.mozilla-esr60.latest.firefox.linux64-opt/artifacts/public/build/target.tar.bz2.
Flags: qe-verify+
Flags: needinfo?(remus.dranca)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: