Bug 1492764 - Set .left class to headerbar box element as Gtk+ does, r=jhorak a=pascalc

Gtk+ sets .left/.right classes to GtkBox element at GtkHeaderBar according to button placement (left/right).
We don't support that now so set .left at least to be compatible with themes - BlueMenta for instance.

Differential Revision: https://phabricator.services.mozilla.com/D6657